# gousto-meal-planner

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b6b5f3c638a_update_models.py  2b702867c8af_initial.py  2fabaefc6947_initial_migration.py  b404b6ae09b0_add_bad_recipe_slug_table.py  bfb5452a0590_auth_prep.py  e720e92794e9_update_models.py  ea2dbaa664be_update_models.py
backend/scripts/: add_new_recipes.py  add_user_to_db.py  fmt.sh  isort.sh  lint.sh  run_dev.sh
backend/src/: auth.py  crud.py  database.py  main.py  models.py  types.py
backend/src/gousto_fetcher/: __init__.py  constants.py  errors.py  fetcher.py  models.py  parser.py  utils.py
backend/tests/: test_gousto_fetching.py
frontend/: .env.dev-remote  .env.dev-remote.example  .env.development  .env.development.example  .env.production  .env.production.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  config.ts  index.css  types.ts
frontend/src/components/: LoadingSpinner.css  LoadingSpinner.tsx  RecipeCard.css  RecipeCard.tsx  RecipePDF.tsx  Search.css  SearchDropdown.css  SearchDropdown.tsx
frontend/src/services/: api.ts
frontend/src/utils/: image.ts
