[project]
name = "gousto-meal-planner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.1",
]
